--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,15 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Debug environment
+      run: |
+        echo "Node.js version: $(node --version)"
+        echo "npm version: $(npm --version)"
+        echo "Jest config check:"
+        ls -la jest.* || echo "No jest config files found"
+        echo "Package.json test scripts:"
+        npm run --silent | grep test || echo "No test scripts found"
+      
     - name: Validate package.json
       run: npm run validate
       
@@ -37,10 +46,13 @@ jobs:
       run: npm run format -- --check
       
     - name: Run unit tests
-      run: npm test -- --testPathPattern="server.test.js" --verbose
+      run: npm run test:unit
+      
+    - name: Run HTTP server tests
+      run: npm run test:http
       
     - name: Run integration tests
-      run: npm test -- --testPathPattern="integration.test.js" --verbose
+      run: npm run test:integration --verbose
       env:
         # Allow integration tests to access external URLs
         NODE_TLS_REJECT_UNAUTHORIZED: 0
