--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev": "node --watch server.js",
     "validate": "node -c server.js && echo 'Server syntax is valid'",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "test:unit": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPattern='server.test.js'",
-    "test:integration": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPattern='integration.test.js'",
-    "test:http": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPattern='http-server.test.js'",
+    "test:unit": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='server.test.js'",
+    "test:integration": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='integration.test.js'",
+    "test:http": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='http-server.test.js'",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -27,20 +27,20 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "axios": "^1.7.0",
-    "cheerio": "^1.0.0",
+    "@modelcontextprotocol/sdk": "^1.18.1",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "express": "^4.18.0"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.0.0",
-    "prettier": "^3.0.0",
-    "supertest": "^7.0.0"
+    "@eslint/js": "^9.35.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.1.3",
+    "prettier": "^3.6.2",
+    "supertest": "^7.1.4"
   },
   "engines": {
     "node": ">=18.0.0"
