--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test:unit": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='server.test.js'",
     "test:integration": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='integration.test.js'",
     "test:http": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='http-server.test.js'",
+    "test:sse": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='sse-mcp.test.js'",
+    "test:menu": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='menu-validation.test.js'",
+    "test:cache": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='cache.test.js'",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
