--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:sse": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='sse-mcp.test.js'",
     "test:menu": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='menu-validation.test.js'",
     "test:cache": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='cache.test.js'",
+    "test:puppeteer": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='puppeteer-scraping.test.js'",
+    "test:real-menu": "NODE_OPTIONS='--experimental-vm-modules' jest --testPathPatterns='real-menu-extraction.test.js'",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -34,7 +36,8 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "puppeteer": "^23.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
